--- a/DeathTokenBase/DeathToken/DeathToken.vcxproj
+++ b/DeathTokenBase/DeathToken/DeathToken.vcxproj
@@ -139,6 +139,7 @@
     <ClInclude Include="checkML.h" />
     <ClInclude Include="Collision.h" />
     <ClInclude Include="HUD.h" />
+    <ClInclude Include="marblesInsanity.h" />
     <ClInclude Include="PlayerEconomy.h" />
     <ClInclude Include="sdlutils.h" />
     <ClInclude Include="Text.h" />
@@ -167,6 +168,7 @@
     <ClCompile Include="Cards.cpp" />
     <ClCompile Include="Carrete.cpp" />
     <ClCompile Include="HUD.cpp" />
+    <ClCompile Include="marblesInsanity.cpp" />
     <ClCompile Include="PlayerEconomy.cpp" />
     <ClCompile Include="sdlUtils.cpp" />
     <ClCompile Include="Text.cpp" />
