--- a/DeathTokenBase/DeathToken/DeathToken.vcxproj
+++ b/DeathTokenBase/DeathToken/DeathToken.vcxproj
@@ -133,6 +133,7 @@
   <ItemGroup>
     <ClInclude Include="Award.h" />
     <ClInclude Include="Baccarat.h" />
+    <ClInclude Include="BattleManager.h" />
     <ClInclude Include="Behaviour.h" />
     <ClInclude Include="BaccaratBet.h" />
     <ClInclude Include="BaccaratBlackjack.h" />
@@ -173,12 +174,14 @@
     <ClCompile Include="BaccaratBet.cpp" />
     <ClCompile Include="BaccaratBlackjack.cpp" />
     <ClCompile Include="BaccaratFlip.cpp" />
+    <ClCompile Include="BattleManager.cpp" />
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="card.cpp" />
     <ClCompile Include="Carrete.cpp" />
     <ClCompile Include="Celda.cpp" />
     <ClCompile Include="HUD.cpp" />
     <ClCompile Include="marblesInsanity.cpp" />
+    <ClCompile Include="Peleas.cpp" />
     <ClCompile Include="PlayerEconomy.cpp" />
     <ClCompile Include="sdlUtils.cpp" />
     <ClCompile Include="Text.cpp" />
