Ajuste del battlemanager para que vaya a la misma velocidad que el texto
Además de eso tambien he tenido que cambiar las dependencias del proyecto pero no se porque no iba

--- a/DeathTokenBase/DeathToken/DeathToken.vcxproj
+++ b/DeathTokenBase/DeathToken/DeathToken.vcxproj
@@ -108,12 +108,12 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Pingu\Downloads\DeathToken\DeathTokenBase\SDL2_mixer-2.8.0\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\jniet\OneDrive\Documentos\GitHub\DeathToken\DeathTokenBase\SDL2_mixer-2.8.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\Pingu\Downloads\DeathToken\DeathTokenBase\SDL2_mixer-2.8.0\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\jniet\OneDrive\Documentos\GitHub\DeathToken\DeathTokenBase\SDL2_mixer-2.8.0\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2_mixer.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
