--- a/DeathTokenBase/DeathToken/DeathToken.vcxproj.filters
+++ b/DeathTokenBase/DeathToken/DeathToken.vcxproj.filters
@@ -25,6 +25,9 @@
     <ClCompile Include="marblesInsanity.cpp" />
     <ClCompile Include="sdlUtils.cpp" />
     <ClCompile Include="Mesa.cpp" />
+    <ClCompile Include="BattleManager.cpp" />
+    <ClCompile Include="Fighter.cpp" />
+    <ClCompile Include="Peleas.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Award.h" />
@@ -59,6 +62,9 @@
     <ClInclude Include="Vector2D.h" />
     <ClInclude Include="Mesa.h" />
     <ClInclude Include="Behaviour.h" />
+    <ClInclude Include="BattleManager.h" />
+    <ClInclude Include="Fighter.h" />
+    <ClInclude Include="Peleas.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Button.cpp">
