--- a/DeathTokenBase/DeathToken/DeathToken.vcxproj
+++ b/DeathTokenBase/DeathToken/DeathToken.vcxproj
@@ -141,6 +141,7 @@
     <ClInclude Include="Carrete.h" />
     <ClInclude Include="checkML.h" />
     <ClInclude Include="Collision.h" />
+    <ClInclude Include="CrazyBaccaratManager.h" />
     <ClInclude Include="HUD.h" />
     <ClInclude Include="PlayerEconomy.h" />
     <ClInclude Include="Text.h" />
@@ -173,6 +174,7 @@
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="card.cpp" />
     <ClCompile Include="Carrete.cpp" />
+    <ClCompile Include="CrazyBaccaratManager.cpp" />
     <ClCompile Include="HUD.cpp" />
     <ClCompile Include="PlayerEconomy.cpp" />
     <ClCompile Include="Text.cpp" />
