--- a/DeathTokenBase/DeathToken/DeathToken.vcxproj
+++ b/DeathTokenBase/DeathToken/DeathToken.vcxproj
@@ -143,88 +143,85 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Award.h" />
-    <ClInclude Include="Baccarat.h" />
-    <ClInclude Include="BaccaratBet.h" />
-    <ClInclude Include="BaccaratBlackjack.h" />
-    <ClInclude Include="BaccaratFlip.h" />
-    <ClInclude Include="BarraVida.h" />
-    <ClInclude Include="BattleManager.h" />
-    <ClInclude Include="Button.h" />
+    <ClInclude Include="award.h" />
+    <ClInclude Include="baccarat.h" />
+    <ClInclude Include="baccaratBet.h" />
+    <ClInclude Include="baccaratBlackjack.h" />
+    <ClInclude Include="baccaratFlip.h" />
+    <ClInclude Include="barraVida.h" />
+    <ClInclude Include="battleManager.h" />
+    <ClInclude Include="button.h" />
     <ClInclude Include="card.h" />
-    <ClInclude Include="Carrete.h" />
-    <ClInclude Include="Celda.h" />
+    <ClInclude Include="carrete.h" />
+    <ClInclude Include="celda.h" />
     <ClInclude Include="checkML.h" />
-    <ClInclude Include="Collision.h" />
-    <ClInclude Include="CrazyBaccaratManager.h" />
-    <ClInclude Include="DialogueBox.h" />
-    <ClInclude Include="Fighter.h" />
-    <ClInclude Include="HUD.h" />
+    <ClInclude Include="baccaratInsanityManager.h" />
+    <ClInclude Include="dialogueBox.h" />
+    <ClInclude Include="fighter.h" />
+    <ClInclude Include="hud.h" />
     <ClInclude Include="marblesInsanity.h" />
-    <ClInclude Include="Peleas.h" />
-    <ClInclude Include="PlayerEconomy.h" />
+    <ClInclude Include="peleas.h" />
+    <ClInclude Include="playerEconomy.h" />
     <ClInclude Include="sdlUtils.h" />
-    <ClInclude Include="SlotsNormal.h" />
-    <ClInclude Include="SoundManager.h" />
-    <ClInclude Include="Text.h" />
-    <ClInclude Include="EndState.h" />
-    <ClInclude Include="EventHandler.h" />
-    <ClInclude Include="Font.h" />
-    <ClInclude Include="Game.h" />
+    <ClInclude Include="slotsNormal.h" />
+    <ClInclude Include="soundManager.h" />
+    <ClInclude Include="text.h" />
+    <ClInclude Include="endState.h" />
+    <ClInclude Include="eventHandler.h" />
+    <ClInclude Include="game.h" />
     <ClInclude Include="gameObject.h" />
     <ClInclude Include="gameState.h" />
     <ClInclude Include="gameStateMachine.h" />
-    <ClInclude Include="Marbles.h" />
-    <ClInclude Include="MatrizSlots.h" />
-    <ClInclude Include="Menu.h" />
-    <ClInclude Include="Player.h" />
-    <ClInclude Include="Roulette.h" />
-    <ClInclude Include="RouletteScene.h" />
+    <ClInclude Include="marbles.h" />
+    <ClInclude Include="menu.h" />
+    <ClInclude Include="player.h" />
+    <ClInclude Include="roulette.h" />
+    <ClInclude Include="rouletteScene.h" />
     <ClInclude Include="sceneObject.h" />
-    <ClInclude Include="Slots.h" />
-    <ClInclude Include="SlotsLocura.h" />
-    <ClInclude Include="Texture.h" />
-    <ClInclude Include="Tutorial.h" />
-    <ClInclude Include="UI.h" />
-    <ClInclude Include="Vector2D.h" />
+    <ClInclude Include="slots.h" />
+    <ClInclude Include="slotsInsanity.h" />
+    <ClInclude Include="texture.h" />
+    <ClInclude Include="tutorial.h" />
+    <ClInclude Include="ui.h" />
+    <ClInclude Include="vector2D.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Award.cpp" />
-    <ClCompile Include="Baccarat.cpp" />
-    <ClCompile Include="BaccaratBet.cpp" />
-    <ClCompile Include="BaccaratBlackjack.cpp" />
-    <ClCompile Include="BaccaratFlip.cpp" />
-    <ClCompile Include="BarraVida.cpp" />
-    <ClCompile Include="BattleManager.cpp" />
-    <ClCompile Include="Button.cpp" />
+    <ClCompile Include="award.cpp" />
+    <ClCompile Include="baccarat.cpp" />
+    <ClCompile Include="baccaratBet.cpp" />
+    <ClCompile Include="baccaratBlackjack.cpp" />
+    <ClCompile Include="baccaratFlip.cpp" />
+    <ClCompile Include="barraVida.cpp" />
+    <ClCompile Include="battleManager.cpp" />
+    <ClCompile Include="button.cpp" />
     <ClCompile Include="card.cpp" />
-    <ClCompile Include="Carrete.cpp" />
-    <ClCompile Include="Celda.cpp" />
-    <ClCompile Include="CrazyBaccaratManager.cpp" />
-    <ClCompile Include="DialogueBox.cpp" />
-    <ClCompile Include="Fighter.cpp" />
-    <ClCompile Include="HUD.cpp" />
+    <ClCompile Include="carrete.cpp" />
+    <ClCompile Include="celda.cpp" />
+    <ClCompile Include="baccaratInsanityManager.cpp" />
+    <ClCompile Include="dialogueBox.cpp" />
+    <ClCompile Include="fighter.cpp" />
+    <ClCompile Include="hud.cpp" />
     <ClCompile Include="marblesInsanity.cpp" />
-    <ClCompile Include="Peleas.cpp" />
-    <ClCompile Include="PlayerEconomy.cpp" />
+    <ClCompile Include="peleas.cpp" />
+    <ClCompile Include="playerEconomy.cpp" />
     <ClCompile Include="sdlUtils.cpp" />
-    <ClCompile Include="SlotsNormal.cpp" />
-    <ClCompile Include="SoundManager.cpp" />
-    <ClCompile Include="Text.cpp" />
-    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="slotsNormal.cpp" />
+    <ClCompile Include="soundManager.cpp" />
+    <ClCompile Include="text.cpp" />
+    <ClCompile Include="game.cpp" />
     <ClCompile Include="gameState.cpp" />
     <ClCompile Include="gameStateMachine.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Marbles.cpp" />
-    <ClCompile Include="Menu.cpp" />
-    <ClCompile Include="Player.cpp" />
-    <ClCompile Include="Roulette.cpp" />
-    <ClCompile Include="RouletteScene.cpp" />
+    <ClCompile Include="marbles.cpp" />
+    <ClCompile Include="menu.cpp" />
+    <ClCompile Include="player.cpp" />
+    <ClCompile Include="roulette.cpp" />
+    <ClCompile Include="rouletteScene.cpp" />
     <ClCompile Include="sceneObject.cpp" />
-    <ClCompile Include="SlotsLocura.cpp" />
-    <ClCompile Include="Texture.cpp" />
-    <ClCompile Include="Tutorial.cpp" />
-    <ClCompile Include="UI.cpp" />
+    <ClCompile Include="slotsInsanity.cpp" />
+    <ClCompile Include="texture.cpp" />
+    <ClCompile Include="tutorial.cpp" />
+    <ClCompile Include="ui.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
