--- a/DeathTokenBase/DeathToken/DeathToken.vcxproj
+++ b/DeathTokenBase/DeathToken/DeathToken.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="inputBox.h" />
     <ClInclude Include="marblesInsanity.h" />
     <ClInclude Include="peleas.h" />
+    <ClInclude Include="peleasInsanity.h" />
     <ClInclude Include="playerEconomy.h" />
     <ClInclude Include="sdlUtils.h" />
     <ClInclude Include="slotsNormal.h" />
@@ -205,6 +206,7 @@
     <ClCompile Include="inputBox.cpp" />
     <ClCompile Include="marblesInsanity.cpp" />
     <ClCompile Include="peleas.cpp" />
+    <ClCompile Include="PeleasInsanity.cpp" />
     <ClCompile Include="playerEconomy.cpp" />
     <ClCompile Include="sdlUtils.cpp" />
     <ClCompile Include="slotsNormal.cpp" />
