--- a/DeathTokenBase/DeathToken/DeathToken.vcxproj
+++ b/DeathTokenBase/DeathToken/DeathToken.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="fighter.h" />
     <ClInclude Include="hud.h" />
     <ClInclude Include="marblesInsanity.h" />
+    <ClInclude Include="Mesa.h" />
     <ClInclude Include="peleas.h" />
     <ClInclude Include="playerEconomy.h" />
     <ClInclude Include="sdlUtils.h" />
@@ -204,6 +205,7 @@
     <ClCompile Include="fighter.cpp" />
     <ClCompile Include="hud.cpp" />
     <ClCompile Include="marblesInsanity.cpp" />
+    <ClCompile Include="Mesa.cpp" />
     <ClCompile Include="peleas.cpp" />
     <ClCompile Include="playerEconomy.cpp" />
     <ClCompile Include="sdlUtils.cpp" />
