--- a/DeathTokenBase/DeathToken/DeathToken.vcxproj.filters
+++ b/DeathTokenBase/DeathToken/DeathToken.vcxproj.filters
@@ -141,6 +141,9 @@
     <ClInclude Include="EscenaTutorial.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="Mesa.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Button.cpp">
@@ -252,6 +255,9 @@
       <Filter>Archivos de origen</Filter>
     </ClCompile>
     <ClCompile Include="EscenaTutorial.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="Mesa.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
   </ItemGroup>
